# OrcaSlicer

./: CMakeLists.txt  README.md  UPSTREAM_VS_FORK.md  build_flatpak.sh  build_linux.sh  build_release_macos.sh  version.inc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: 3dprintforge-build.yml  build_all.yml.disabled  build_orca.yml.disabled  doxygen-docs.yml
localization/i18n/: OrcaSlicer.pot
resources/images/: 3DPrintForgeSlicer.icns
scripts/: Dockerfile  build_flatpak_with_docker.sh  run_gettext.sh
scripts/flatpak/: com.3dprintforge.3DPrintForgeSlicer.metainfo.xml  com.3dprintforge.Slicer.metainfo.xml  com.3dprintforge.Slicer.yml  com._3dprintforge.Slicer.metainfo.xml  com._3dprintforge.Slicer.yml  entrypoint
src/: CMakeLists.txt  ForgeSlicer.cpp  ForgeSlicer_app_msvc.cpp  OrcaSlicer.cpp
src/dev-utils/: BaseException.cpp
src/forge/: CMakeLists.txt  INTEGRATION.md  INVENTORY_API.md  MIXED_COLOR_TESTING.md  README.md  rest_server.cpp  rest_server.hpp
src/libslic3r/: AppConfig.cpp  CMakeLists.txt  ColorLayer.cpp  ColorLayer.hpp  ColorLayerMesh.cpp  ColorLayerMesh.hpp  ColorOrderOptimizer.cpp  ColorOrderOptimizer.hpp  Config.cpp  Config.hpp  ForgeAccount.cpp  ForgeAccount.hpp  ForgeCalibration.cpp  ForgeCalibration.hpp  ForgeFilamentManager.cpp  ForgeFilamentManager.hpp  ForgeFilamentMatch.cpp  ForgeFilamentMatch.hpp  ForgePrinterMatch.cpp  ForgePrinterMatch.hpp  ForgeSpool.cpp  ForgeSpool.hpp  ForgeSpoolMatch.cpp  ForgeSpoolMatch.hpp  MixedFilament.cpp  MixedFilament.hpp  PlaceholderParser.cpp  Preset.cpp  (+12 more)
(+254 files in other folders)
